bppackaging/src/objects/Individual_Tax__c.object
<CustomObject>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Item_Name__c</fullName>
        <label>Sales Tax Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Individual Taxes</relationshipLabel>
        <relationshipName>Individual_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Individual Tax</label>
    <nameField>
        <displayFormat>ITN-{00000000}</displayFormat>
        <label>Individual Tax Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>